--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
     <h5>Way</h5>
     <h6>Up</h6>
     <p>High</p>
+    <ol>
+        <li id="one" class="onethree">One</li>
+        <li id="two">Two</li>
+        <li id="three" class="onethree">Three</li>
+    </ol>
 </body>
 </html>
